<resources>
    <string name="app_name">EscapeApp</string>
    <string name="connectionMessage">not connected</string>
    <string name="startButton">Start</string>
    <string name="connectButton">Connect</string>
    <string name="title_activity_game__a_">Game_A_Activity</string>
    <string name="codeButton">Code</string>
    <string name="picButton">Picture</string>
    <string name="code">M I H A</string>
    <string name="codedec">Decipher the following code by looking for letters in the painting and matching them to the alphabet:</string>
    <string name="clickButton">START</string>
    <string name="amount">Times clicked: 0</string>
    <string name="gameB">Tap the button 125 times before time runs out!</string>
    <string name="player_name">Enter your name</string>
    <string name="waiting">Waiting for minigame to start...</string>
    <string name="restartButton">Restart</string>
    <string name="answerA">Fill in your solution</string>
    <string name="verifyMessage">The answer you entered is incorrect!</string>
    <string name="verifyButton">Verify</string>
    <string name="gameC">Forward the colorcode to the Oculus player!</string>
    <string name="startC">Start</string>
    <string name="title_activity_d__gyroscope">D_Gyroscope</string>
    <string name="gyroheader" color="@color/white">Don\'t let the ball fall off!</string>
    <string name="action_settings">Settings</string>
    <string name="squashtext">Squash the bugs!</string>
    <string name="remote_host">Enter the remote address</string>
</resources>
